disconnect winscp session when closing console app

--- a/src/fsync/fsync.csproj
+++ b/src/fsync/fsync.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions.cs" />
     <Compile Include="FakeConsole.cs" />
     <Compile Include="FSync.cs" />
     <Compile Include="FileWatcher.cs" />
