upgrade winscp, some minor fixes

--- a/lib-src/winscp/dotnet/WinSCPnet.csproj
+++ b/lib-src/winscp/dotnet/WinSCPnet.csproj
@@ -25,7 +25,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>WinSCPnet.ruleset</CodeAnalysisRuleSet>
-    <RunCodeAnalysis>true</RunCodeAnalysis>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <OutputPath>bin\</OutputPath>
   </PropertyGroup>
@@ -66,6 +66,8 @@
     <Compile Include="Internal\Lock.cs" />
     <Compile Include="Internal\Logger.cs" />
     <Compile Include="Internal\ProgressHandler.cs" />
+    <Compile Include="Internal\SessionElementLogReader.cs" />
+    <Compile Include="Internal\Tools.cs" />
     <Compile Include="Internal\UnsafeNativeMethods.cs" />
     <Compile Include="OutputDataReceivedEventArgs.cs" />
     <Compile Include="FileTransferProgressEventArgs.cs" />
