--- a/src/fsync/fsync.csproj
+++ b/src/fsync/fsync.csproj
@@ -38,7 +38,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="corex">
-      <HintPath>..\..\..\corex\src\corex\bin\corex.dll</HintPath>
+      <HintPath>..\..\lib\corex\corex.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
